--- a/CSS/Cabecera/cabecera.css
+++ b/CSS/Cabecera/cabecera.css
@@ -1,8 +1,11 @@
 .cabecera{
+    width: 100vw;
     display: flex;
     justify-content: space-around;
-    margin: 20px;
+    padding: 20px;
     align-items: center;
     height: 70px;
+    position: fixed;
+    background-color: #f5f5f5;
     
 }
