--- a/CSS/Cabecera/cabecera.css
+++ b/CSS/Cabecera/cabecera.css
@@ -9,3 +9,16 @@
     background-color: #f5f5f5;
     
 }
+
+
+/* Medias querys */
+
+@media screen and (max-width: 900px) {
+    .cabecera{
+        flex-direction: column;
+        justify-content: center;
+        height: auto;
+        
+    }
+
+}
