--- a/CSS/Experiencia/experiencia-caja.css
+++ b/CSS/Experiencia/experiencia-caja.css
@@ -8,3 +8,8 @@
     padding: 20px;
     
 }
+@media screen and (max-width:900px) {
+    .experiencia-caja{
+        flex-direction: column;
+    }
+}
