--- a/CSS/Perfil/perfil.css
+++ b/CSS/Perfil/perfil.css
@@ -9,3 +9,10 @@
     align-items: center;
     background: url("") ;
 }
+
+
+@media screen and (max-width: 900px) {
+    .perfil{
+        flex-direction: column;
+    }
+}
