--- a/CSS/Cabecera/logo.css
+++ b/CSS/Cabecera/logo.css
@@ -13,3 +13,10 @@
     margin-left: 5px;
     font-size: 1.3rem;
 }
+
+@media screen and (max-width: 900px) {
+    .logo{
+        margin: 20px;
+    }
+
+}
