--- a/CSS/Footer/Formulario.css
+++ b/CSS/Footer/Formulario.css
@@ -66,3 +66,12 @@
     height: 2.1rem;
     box-shadow: 2px 2px 2px rgb(99, 97, 97);
 }
+
+
+
+
+@media screen and (max-width:900px) {
+    .formulario{
+        justify-content: center;
+    }
+}
