--- a/CSS/Formacion/items-estudios.css
+++ b/CSS/Formacion/items-estudios.css
@@ -2,11 +2,19 @@
     display: flex;
     flex-direction: column;
     width: 450px;
-    height: 250px;
     height: auto;
-    margin-bottom:35px ;
-    
+    margin: 30px 30px 20px;
+    transition: 500ms ease-in-out;  
+    justify-content: center;
+    align-items: center;
+    transition: 800ms ease-in-out;
 }
+.formacion-item:hover{
+    width: 490px;
+    height: 520px;
+}
+
+
 .item-imagen{
     display: flex;
     width: 450px;
@@ -15,14 +23,22 @@
     justify-content: center;
     align-items: center;
     border-radius: 10px;
+    transition: 800ms ease-in-out;
+}
+.item-imagen:hover{
+    width: 450px;
+    height: 350px;
 }
 .formacion-item img{
     background-color: white;
     width: 200px;
     margin: 50px;
+    transition: 800ms ease-in-out;
 }
+
 .formacion-item li{
     list-style: none;
+    transition: 800ms ease-in-out;
 }
 
 .formacion-item li h3{
@@ -30,6 +46,7 @@
     font-size: 1.1rem;
     font-weight: bold;
     margin: 10px;
+    transition: 800ms ease-in-out;
 }
 
 .formacion-item li p{
@@ -37,4 +54,10 @@
     font-size: 1.1rem;
     font-weight: 400;
     margin: 10px;
+    transition: 800ms ease-in-out;
 }
+
+
+
+
+
