--- a/CSS/Perfil/foto.css
+++ b/CSS/Perfil/foto.css
@@ -6,3 +6,19 @@
     border-radius: 100%;
     margin-left: 15px;
 }
+
+@media screen and (max-width:900px) {
+    .perfil__foto{
+        order: 0;
+        margin: 20px 0;
+        justify-content: center;
+
+    }
+}
+
+@media screen and (max-width:780px) {
+    .perfil__foto{
+        justify-content: center;
+        margin-top: 110px;
+    }
+}
