--- a/CSS/Perfil/perfil-titulo.css
+++ b/CSS/Perfil/perfil-titulo.css
@@ -3,3 +3,9 @@
     margin-top: 35px;
     font-weight: bold;
 }
+
+@media screen and (max-width:900px) {
+    .perfil__titulo{
+        text-align: center;
+    }
+}
