--- a/CSS/Experiencia/experiencia-imagen.css
+++ b/CSS/Experiencia/experiencia-imagen.css
@@ -22,3 +22,9 @@
     height: 29rem;
     box-shadow: 5px 5px 5px rgba(117, 116, 116, 0.199);
 }
+
+@media screen and (max-width:900px) {
+    .experiencia-img{
+        width: 95vw;
+    }
+}
